force-app/main/default/objects/Trainee_Group__c/Trainee_Group__c.object-meta.xml
<CustomObject>
    <description>Training Groups created</description>
    <label>Trainee Group</label>
    <nameField>
        <label>Trainee Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trainee Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>