force-app/main/default/objects/Trainee_Group__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Informative Session</fullName>
                <default>true</default>
                <label>Informative Session</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Trailhead</fullName>
            </value>
            <value>
                <fullName>EAX_Exam</fullName>
                <label>EAX Exam</label>
            </value>
            <value>
                <fullName>Study Guides Focus on Force</fullName>
            </value>
            <value>
                <fullName>Practice_Exams_Focus_on_Force</fullName>
                <label>Practice Exams Focus on Force</label>
            </value>
            <value>
                <fullName>Mock_Test</fullName>
                <label>Mock Test</label>
            </value>
            <value>
                <fullName>Certification_Exam</fullName>
                <label>Certification Exam</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>