force-app/main/default/objects/Trainee_Group__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Starting date</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>