force-app/main/default/objects/Trainee_Group__c/fields/Total_Group_Members__c.field-meta.xml
<CustomField>
    <fullName>Total_Group_Members__c</fullName>
    <label>Total Group Members</label>
    <summaryForeignKey>Trainee_Group_Member__c.Trainee_Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>