force-app/main/default/objects/Trainee_Group__c/fields/Trainee_Group_Classification__c.field-meta.xml
<CustomField>
    <fullName>Trainee_Group_Classification__c</fullName>
    <label>Trainee Group Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>University</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Mixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>